# cell-abm-pipeline

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  basic_metrics.html  basic_metrics.plot_projection.html  basic_metrics.plot_spatial.html  basic_metrics.plot_temporal.html  cell_abm_pipeline.flows.analyze_cell_shapes.html  cell_abm_pipeline.flows.analyze_cell_shapes_chunk.html  cell_abm_pipeline.flows.analyze_colony_dynamics.html  cell_abm_pipeline.flows.analyze_resource_usage.html  cell_abm_pipeline.flows.analyze_shape_modes.html  cell_abm_pipeline.flows.calculate_coefficients.html  cell_abm_pipeline.flows.calculate_neighbors.html  cell_abm_pipeline.flows.calculate_properties.html  cell_abm_pipeline.flows.convert_arcade_format.html  cell_abm_pipeline.flows.demo.html  cell_abm_pipeline.flows.download_images.html  cell_abm_pipeline.flows.generate_coordinates.html  cell_abm_pipeline.flows.generate_voronoi_tessellation.html  cell_abm_pipeline.flows.html  cell_abm_pipeline.flows.initialize_arcade_simulations.html  cell_abm_pipeline.flows.initialize_arcade_simulations_aws.html  cell_abm_pipeline.flows.initialize_arcade_simulations_local.html  cell_abm_pipeline.flows.initialize_voronoi_simulations.html  cell_abm_pipeline.flows.make_simulation_movies.html  cell_abm_pipeline.flows.organize_coefficients.html  cell_abm_pipeline.flows.organize_neighbors.html  cell_abm_pipeline.flows.organize_properties.html  cell_abm_pipeline.flows.plot_basic_metrics.html  cell_abm_pipeline.flows.plot_colony_analysis.html  cell_abm_pipeline.flows.plot_colony_dynamics.html  cell_abm_pipeline.flows.plot_resource_analysis.html  cell_abm_pipeline.flows.plot_resource_usage.html  (+117 more)
_coverage/: d_225eb92fe287c98e___init___py.html  d_225eb92fe287c98e_analyze_basic_metrics_py.html  d_225eb92fe287c98e_analyze_cell_shapes_py.html  d_225eb92fe287c98e_analyze_colony_dynamics_py.html  d_225eb92fe287c98e_calculate_coefficients_py.html  d_225eb92fe287c98e_calculate_image_properties_py.html  d_225eb92fe287c98e_calculate_neighbors_py.html  d_225eb92fe287c98e_calculate_positions_py.html  d_225eb92fe287c98e_calculate_properties_py.html  d_225eb92fe287c98e_convert_arcade_format_py.html  d_225eb92fe287c98e_convert_physicell_format_py.html  d_225eb92fe287c98e_demo_py.html  d_225eb92fe287c98e_download_images_py.html  d_225eb92fe287c98e_generate_voronoi_tessellation_py.html  d_225eb92fe287c98e_group_basic_metrics_py.html  d_225eb92fe287c98e_group_cell_shapes_py.html  d_225eb92fe287c98e_group_colony_dynamics_py.html  d_225eb92fe287c98e_group_resource_usage_py.html  d_225eb92fe287c98e_initialize_arcade_simulations_py.html  d_225eb92fe287c98e_initialize_physicell_simulations_py.html  d_225eb92fe287c98e_make_simulation_movies_py.html  d_225eb92fe287c98e_organize_analysis_files_py.html  d_225eb92fe287c98e_organize_calculation_files_py.html  d_225eb92fe287c98e_parse_arcade_simulations_py.html  d_225eb92fe287c98e_parse_physicell_simulations_py.html  d_225eb92fe287c98e_plot_basic_metrics_py.html  d_225eb92fe287c98e_plot_cell_shapes_py.html  d_225eb92fe287c98e_plot_colony_dynamics_py.html  d_225eb92fe287c98e_plot_resource_usage_py.html  d_225eb92fe287c98e_process_sample_py.html  d_225eb92fe287c98e_run_batch_simulations_py.html  d_225eb92fe287c98e_run_docker_simulations_py.html  d_225eb92fe287c98e_run_fargate_calculations_py.html  d_225eb92fe287c98e_sample_image_py.html  d_225eb92fe287c98e_summarize_manifest_py.html  d_64bbed2a02d3b300___init___py.html  d_64bbed2a02d3b300_bin_to_hex_py.html  d_64bbed2a02d3b300_build_svg_image_py.html  d_64bbed2a02d3b300_calculate_category_durations_py.html  d_64bbed2a02d3b300_calculate_data_bins_py.html  (+27 more)
_modules/: index.html
_sources/: basic_metrics.plot_projection.rst.txt  basic_metrics.plot_spatial.rst.txt  basic_metrics.plot_temporal.rst.txt  basic_metrics.rst.txt  cell_abm_pipeline.flows.analyze_cell_shapes.rst.txt  cell_abm_pipeline.flows.analyze_cell_shapes_chunk.rst.txt  cell_abm_pipeline.flows.analyze_colony_dynamics.rst.txt  cell_abm_pipeline.flows.analyze_resource_usage.rst.txt  cell_abm_pipeline.flows.analyze_shape_modes.rst.txt  cell_abm_pipeline.flows.calculate_coefficients.rst.txt  cell_abm_pipeline.flows.calculate_neighbors.rst.txt  cell_abm_pipeline.flows.calculate_properties.rst.txt  cell_abm_pipeline.flows.convert_arcade_format.rst.txt  cell_abm_pipeline.flows.demo.rst.txt  cell_abm_pipeline.flows.download_images.rst.txt  cell_abm_pipeline.flows.generate_coordinates.rst.txt  cell_abm_pipeline.flows.generate_voronoi_tessellation.rst.txt  cell_abm_pipeline.flows.initialize_arcade_simulations.rst.txt  cell_abm_pipeline.flows.initialize_arcade_simulations_aws.rst.txt  cell_abm_pipeline.flows.initialize_arcade_simulations_local.rst.txt  cell_abm_pipeline.flows.initialize_voronoi_simulations.rst.txt  cell_abm_pipeline.flows.make_simulation_movies.rst.txt  cell_abm_pipeline.flows.organize_coefficients.rst.txt  cell_abm_pipeline.flows.organize_neighbors.rst.txt  cell_abm_pipeline.flows.organize_properties.rst.txt  cell_abm_pipeline.flows.plot_basic_metrics.rst.txt  cell_abm_pipeline.flows.plot_colony_analysis.rst.txt  cell_abm_pipeline.flows.plot_colony_dynamics.rst.txt  cell_abm_pipeline.flows.plot_resource_analysis.rst.txt  cell_abm_pipeline.flows.plot_resource_usage.rst.txt  cell_abm_pipeline.flows.plot_shape_analysis.rst.txt  cell_abm_pipeline.flows.plot_shape_modes.rst.txt  cell_abm_pipeline.flows.process_cell_shapes.rst.txt  cell_abm_pipeline.flows.process_colony_dynamics.rst.txt  (+102 more)
(+635 files in other folders)
