[tool.poetry]
name = "cell-abm-pipeline"
version = "0.0.0"
description = "Cell ABM workflows."
authors = [
    "Jessica S. Yu <jesyu@uw.edu>"
]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2.8.2"
hydra-core = "^1.2.0"
io-collection = "^0.7.0"
container-collection = "^0.5.0"
arcade-collection = "^0.7.0"
abm-initialization-collection = "^0.3.0"
abm-shape-collection = "^0.3.1"
abm-colony-collection = "^0.3.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
mypy = "^0.971"
pylint = "^2.16.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-subtests = "^0.8.0"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.2.0"
sphinx_mdinclude = "^0.5.3"
tox = "^3.26.0"

[tool.poetry.scripts]
abmpipe = "cell_abm_pipeline.__main__:main"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
