[tool.poetry]
name = "cell-abm-pipeline"
version = "0.0.0"
description = "Cell ABM workflows."
authors = [
    "Jessica S. Yu <jesyu@uw.edu>"
]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2.11.3"
hydra-core = "^1.2.0"
io-collection = "^0.9.0"
container-collection = "^0.6.1"
arcade-collection = "^0.10.0"
abm-initialization-collection = "^0.5.2"
abm-shape-collection = "^0.7.2"
abm-colony-collection = "^0.3.4"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pylint = "^2.16.2"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-subtests = "^0.11.0"
sphinx = "^7.0.1"
furo = "^2023.5.20"
myst-parser = "^2.0.0"
sphinx-copybutton = "^0.5.2"
tox = "^4.5.1"
pre-commit = "^3.3.3"
types-requests = "^2.31.0.2"

[tool.poetry.scripts]
abmpipe = "cell_abm_pipeline.__main__:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
]
good-names = ["i", "j", "k", "x", "y", "z", "ax", "ds", "dt"]

[tool.pylint.design]
max-args = 10 # maximum number of arguments for function / method

[tool.pylint.similarities]
min-similarity-lines = 10 # minimum lines number of a similarity

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
disable_error_code = "attr-defined"
plugins = "src/cell_abm_pipeline/utilities/prefect_plugin.py"

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "matplotlib.*",
    "mpl_toolkits.*",
    "pandas.*",
    "ruamel.*",
    "simulariumio.*",
    "sklearn.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{39,310}, format, lint, typecheck
skipsdist=True

[testenv]
allowlist_externals = poetry
commands =
    poetry run pytest --cov-report html --cov=src/ tests/

[testenv:format]
commands =
    poetry run black -l 100 src/ tests/
    poetry run isort -l 100 src/ tests/

[testenv:lint]
commands =
    poetry run pylint --ignore-patterns=test.*?py src/ tests/ --fail-under=9.0

[testenv:typecheck]
commands =
    poetry run mypy --disallow-untyped-calls --disallow-untyped-defs --disallow-incomplete-defs src
"""
